fix: 之前的文章修改

--- a/source/_posts/数据库的简单实现2.md
+++ b/source/_posts/数据库的简单实现2.md
@@ -1,9 +1,14 @@
-# 数据库的简单实现2
-
-Description: 添加索引和二进制格式存储
-Public: No
-Published: 2022/03/16
-Tags: 数据库
+---
+title: 添加索引和二进制格式存储
+description: 添加索引和二进制格式存储
+date: 2022/03/16
+updated: 2022/03/16
+tags:
+  - 数据库
+  - 数据库的简单实现2
+categories:
+  - 数据库
+---
 
 ### 索引
 
@@ -142,27 +147,27 @@ const set = (key: string, value: string) => {
 最后附上完整的代码：
 
 - 点击展开
-    
+
     ```tsx
     import * as repl from 'repl';
     import * as fs from 'fs';
     import * as path from 'path';
-    
+
     const dbFile = './data.db';
-    
+
     type Offset = number;
     type Size = number; // how many bytes
     type Index = [Offset, Size];
-    
+
     const map = new Map<string, Index>();
     const fd = fs.openSync(dbFile, 'a+'); // `a+` flag means open file for reading and appending.
-    
+
     const enum DataType {
       Boolean,
       Number,
       String,
     }
-    
+
     /**
      * @description: 从 db文件中遍历所有行找数据
      * @param {string} key
@@ -176,10 +181,10 @@ const set = (key: string, value: string) => {
         fs.readSync(fd, buffer, 0, size, offset);
         return deserialize(buffer);
       }
-    
+
       return null;
     };
-    
+
     /**
      * @description: 写数据
      * @param {string} key
@@ -197,13 +202,13 @@ const set = (key: string, value: string) => {
       } else {
         buffer = serialize(value);
       }
-    
+
       const size = buffer.byteLength;
       const offset = fs.statSync(dbFile).size;
       map.set(key, [offset, size]);
       fs.appendFileSync(dbFile, buffer);
     };
-    
+
     /**
      * @description: 反序列化函数
      * @param {boolean} val
@@ -211,7 +216,7 @@ const set = (key: string, value: string) => {
      */
     const deserialize = (buf: Buffer): boolean | number | string => {
       const type = buf[0];
-    
+
       switch (type) {
         case DataType.Boolean: {
           return buf[1] === 1;
@@ -226,7 +231,7 @@ const set = (key: string, value: string) => {
           return buf.slice(1).toString();
       }
     };
-    
+
     /**
      * @description: 序列化函数
      * @param {boolean} val
@@ -236,7 +241,7 @@ const set = (key: string, value: string) => {
       let buf: Buffer;
       let type: Buffer;
       let data: Buffer;
-    
+
       switch (typeof val) {
         case 'boolean': {
           type = Buffer.alloc(1, DataType.Boolean);
@@ -259,11 +264,11 @@ const set = (key: string, value: string) => {
           data = Buffer.from(val);
         }
       }
-    
+
       buf = Buffer.concat([type, data]);
       return buf;
     };
-    
+
     /**
      * @description: 检查DB文件是否存在，不存在则创建
      * @param {string} filePath
@@ -276,7 +281,7 @@ const set = (key: string, value: string) => {
         fs.writeFileSync(p, "");
       }
     };
-    
+
     repl.start({
       prompt: 'db.js >> ',
       eval: async (evalCmd, _context, _file, callback) => {
@@ -296,7 +301,7 @@ const set = (key: string, value: string) => {
       },
     });
     ```
-    
+
 
 ### 参考
 
