--- a/source/_posts/数据库的简单实现1.md
+++ b/source/_posts/数据库的简单实现1.md
@@ -1,9 +1,14 @@
-# 数据库的简单实现1
-
-Description: 最简单的K-V数据库后端实现
-Public: No
-Published: 2022/03/09
-Tags: 数据库
+---
+title: 最简单的K-V数据库后端实现
+description: 最简单的K-V数据库后端实现
+date: 2022/03/09
+updated: 2022/03/09
+tags:
+  - 数据库
+  - 数据库的简单实现2
+categories:
+  - 数据库
+---
 
 这里将用TypeScript开始实现一个最简单的 Key-Value 数据库，以理解数据库是怎么工作的。
 
@@ -117,15 +122,15 @@ db.js >> get a
 虽然用 Node.js 来实现肯定不会有太好的性能，但这个学习过程中会像设计一个真正的数据库一样去思考。在 Node 中可以利用 `[Buffer](https://nodejs.org/api/buffer.html#buffer)` 来实现对二进制数据进行操作，因此后续会将文本格式改为二进制格式。
 
 - 最后附上完整的代码：
-    
+
     ```tsx
     import * as repl from "repl";
     import * as fs from "fs";
     import * as readline from "readline";
     import * as path from "path";
-    
+
     const dbFile = "./data.db";
-    
+
     /**
      * @description: 从 db文件中遍历所有行找数据
      * @param {string} key
@@ -148,7 +153,7 @@ db.js >> get a
         });
       });
     };
-    
+
     /**
      * @description: 写数据
      * @param {string} key
@@ -158,7 +163,7 @@ db.js >> get a
     const set = (key: string, value: string) => {
       fs.appendFileSync(dbFile, `${key},${value}\n`);
     };
-    
+
     /**
      * @description: 检查DB文件是否存在，不存在则创建
      * @param {string} filePath
@@ -171,7 +176,7 @@ db.js >> get a
         fs.writeFileSync(p, "");
       }
     };
-    
+
     repl.start({
       prompt: "db.js >> ",
       eval: async (evalCmd, _context, _file, callback) => {
@@ -191,7 +196,7 @@ db.js >> get a
       },
     });
     ```
-    
+
 
 ### 参考
 
