--- a/source/_posts/数据库的简单实现-添加索引和二进制格式存储2.md
+++ b/source/_posts/数据库的简单实现-添加索引和二进制格式存储2.md
@@ -1,5 +1,5 @@
 ---
-title: 添加索引和二进制格式存储
+title: 添加索引和二进制格式存储（数据库的简单实现2）
 description: 添加索引和二进制格式存储
 date: 2022/03/16
 updated: 2022/03/16
@@ -146,161 +146,159 @@ const set = (key: string, value: string) => {
 
 最后附上完整的代码：
 
-- 点击展开
+```tsx
+import * as repl from 'repl';
+import * as fs from 'fs';
+import * as path from 'path';
 
-    ```tsx
-    import * as repl from 'repl';
-    import * as fs from 'fs';
-    import * as path from 'path';
-    
-    const dbFile = './data.db';
-    
-    type Offset = number;
-    type Size = number; // how many bytes
-    type Index = [Offset, Size];
-    
-    const map = new Map<string, Index>();
-    const fd = fs.openSync(dbFile, 'a+'); // `a+` flag means open file for reading and appending.
-    
-    const enum DataType {
-      Boolean,
-      Number,
-      String,
+const dbFile = './data.db';
+
+type Offset = number;
+type Size = number; // how many bytes
+type Index = [Offset, Size];
+
+const map = new Map<string, Index>();
+const fd = fs.openSync(dbFile, 'a+'); // `a+` flag means open file for reading and appending.
+
+const enum DataType {
+  Boolean,
+  Number,
+  String,
+}
+
+/**
+ * @description: 从 db文件中遍历所有行找数据
+ * @param {string} key
+ * @return {*}
+ */
+const get = (key: string) => {
+  const index = map.get(key);
+  if (index) {
+    const [offset, size] = index;
+    const buffer = Buffer.alloc(size);
+    fs.readSync(fd, buffer, 0, size, offset);
+    return deserialize(buffer);
+  }
+
+  return null;
+};
+
+/**
+ * @description: 写数据
+ * @param {string} key
+ * @param {string} value
+ * @return {*}
+ */
+const set = (key: string, value: string) => {
+  let buffer: Buffer;
+  if (value === 'true' || value === 'false') {
+    // boolean
+    buffer = serialize(JSON.parse(value));
+  } else if (/^-?\d+$/.test(value)) {
+    // number
+    buffer = serialize(parseFloat(value));
+  } else {
+    buffer = serialize(value);
+  }
+
+  const size = buffer.byteLength;
+  const offset = fs.statSync(dbFile).size;
+  map.set(key, [offset, size]);
+  fs.appendFileSync(dbFile, buffer);
+};
+
+/**
+ * @description: 反序列化函数
+ * @param {boolean} val
+ * @return {*}
+ */
+const deserialize = (buf: Buffer): boolean | number | string => {
+  const type = buf[0];
+
+  switch (type) {
+    case DataType.Boolean: {
+      return buf[1] === 1;
     }
-    
-    /**
-     * @description: 从 db文件中遍历所有行找数据
-     * @param {string} key
-     * @return {*}
-     */
-    const get = (key: string) => {
-      const index = map.get(key);
-      if (index) {
-        const [offset, size] = index;
-        const buffer = Buffer.alloc(size);
-        fs.readSync(fd, buffer, 0, size, offset);
-        return deserialize(buffer);
-      }
-    
-      return null;
-    };
-    
-    /**
-     * @description: 写数据
-     * @param {string} key
-     * @param {string} value
-     * @return {*}
-     */
-    const set = (key: string, value: string) => {
-      let buffer: Buffer;
-      if (value === 'true' || value === 'false') {
-        // boolean
-        buffer = serialize(JSON.parse(value));
-      } else if (/^-?\d+$/.test(value)) {
-        // number
-        buffer = serialize(parseFloat(value));
-      } else {
-        buffer = serialize(value);
-      }
-    
-      const size = buffer.byteLength;
-      const offset = fs.statSync(dbFile).size;
-      map.set(key, [offset, size]);
-      fs.appendFileSync(dbFile, buffer);
-    };
-    
-    /**
-     * @description: 反序列化函数
-     * @param {boolean} val
-     * @return {*}
-     */
-    const deserialize = (buf: Buffer): boolean | number | string => {
-      const type = buf[0];
-    
-      switch (type) {
-        case DataType.Boolean: {
-          return buf[1] === 1;
-        }
-        case DataType.Number: {
-          return buf.readDoubleBE(1);
-        }
-        case DataType.String: {
-          return buf.slice(1).toString();
-        }
-        default:
-          return buf.slice(1).toString();
-      }
-    };
-    
-    /**
-     * @description: 序列化函数
-     * @param {boolean} val
-     * @return {*}
-     */
-    const serialize = (val: boolean | number | string): Buffer => {
-      let buf: Buffer;
-      let type: Buffer;
-      let data: Buffer;
-    
-      switch (typeof val) {
-        case 'boolean': {
-          type = Buffer.alloc(1, DataType.Boolean);
-          data = Buffer.alloc(1, val ? 1 : 0);
-          break;
-        }
-        case 'number': {
-          type = Buffer.alloc(1, DataType.Number);
-          data = Buffer.allocUnsafe(8);
-          data.writeDoubleBE(val);
-          break;
-        }
-        case 'string': {
-          type = Buffer.alloc(1, DataType.String);
-          data = Buffer.from(val);
-          break;
-        }
-        default: {
-          type = Buffer.alloc(1, DataType.String);
-          data = Buffer.from(val);
-        }
-      }
-    
-      buf = Buffer.concat([type, data]);
-      return buf;
-    };
-    
-    /**
-     * @description: 检查DB文件是否存在，不存在则创建
-     * @param {string} filePath
-     * @return {*}
-     */
-    const checkFiles = (filePath: string) => {
-      const p = path.resolve(process.cwd(), filePath);
-      const exist = fs.existsSync(p);
-      if (!exist) {
-        fs.writeFileSync(p, "");
-      }
-    };
-    
-    repl.start({
-      prompt: 'db.js >> ',
-      eval: async (evalCmd, _context, _file, callback) => {
-        checkFiles(dbFile);
-        const cmd = evalCmd.trim();
-        if (cmd.startsWith('set')) {
-          const [, key, value] = cmd.split(' ');
-          set(key, value);
-          return callback(null, value);
-        }
-        if (cmd.startsWith('get')) {
-          const [, key] = cmd.split(' ');
-          const value = get(key);
-          return callback(null, value);
-        }
-        return callback(null, `Unrecognized command ${evalCmd}`);
-      },
-    });
-    ```
+    case DataType.Number: {
+      return buf.readDoubleBE(1);
+    }
+    case DataType.String: {
+      return buf.slice(1).toString();
+    }
+    default:
+      return buf.slice(1).toString();
+  }
+};
+
+/**
+ * @description: 序列化函数
+ * @param {boolean} val
+ * @return {*}
+ */
+const serialize = (val: boolean | number | string): Buffer => {
+  let buf: Buffer;
+  let type: Buffer;
+  let data: Buffer;
+
+  switch (typeof val) {
+    case 'boolean': {
+      type = Buffer.alloc(1, DataType.Boolean);
+      data = Buffer.alloc(1, val ? 1 : 0);
+      break;
+    }
+    case 'number': {
+      type = Buffer.alloc(1, DataType.Number);
+      data = Buffer.allocUnsafe(8);
+      data.writeDoubleBE(val);
+      break;
+    }
+    case 'string': {
+      type = Buffer.alloc(1, DataType.String);
+      data = Buffer.from(val);
+      break;
+    }
+    default: {
+      type = Buffer.alloc(1, DataType.String);
+      data = Buffer.from(val);
+    }
+  }
+
+  buf = Buffer.concat([type, data]);
+  return buf;
+};
+
+/**
+ * @description: 检查DB文件是否存在，不存在则创建
+ * @param {string} filePath
+ * @return {*}
+ */
+const checkFiles = (filePath: string) => {
+  const p = path.resolve(process.cwd(), filePath);
+  const exist = fs.existsSync(p);
+  if (!exist) {
+    fs.writeFileSync(p, "");
+  }
+};
+
+repl.start({
+  prompt: 'db.js >> ',
+  eval: async (evalCmd, _context, _file, callback) => {
+    checkFiles(dbFile);
+    const cmd = evalCmd.trim();
+    if (cmd.startsWith('set')) {
+      const [, key, value] = cmd.split(' ');
+      set(key, value);
+      return callback(null, value);
+    }
+    if (cmd.startsWith('get')) {
+      const [, key] = cmd.split(' ');
+      const value = get(key);
+      return callback(null, value);
+    }
+    return callback(null, `Unrecognized command ${evalCmd}`);
+  },
+});
+```
 
 
 ### 参考
