--- a/source/_posts/给现有的项目中添加一个文档工具.md
+++ b/source/_posts/给现有的项目中添加一个文档工具.md
@@ -23,7 +23,7 @@ categories:
 首先需要转换和解析组件：
 
 ```bash
-npm i xdm remark-frontmatter remark-mdx-frontmatter @mdx-js/react
+npm i xdm remark-frontmatter remark-mdx-frontmatter @mdx-js/react highlight.js
 ```
 
 ### 批量转换脚本
@@ -48,6 +48,7 @@ comDirs.forEach(v => {
       jsx: true,
       providerImportSource: '@mdx-js/react',
       remarkPlugins: [remarkFrontmatter, remarkMdxFrontmatter],
+      rehypePlugins: [rehypeHighlight],
     });
     writeFileSync(path.resolve(comPath, v, 'doc.js'), value)
   }
@@ -83,6 +84,8 @@ package.json文件添加doc命令
 const getTemplate = (docPaths) =>  `
 import { MDXProvider } from '@mdx-js/react';
 import { useState } from 'react';
+import styles from './index.less';
+import 'highlight.js/styles/github.css';
 ${docPaths.map(v => `import ${v}Doc, { title as ${v}Title } from '@/components/${v}/doc.js';`).join('\\n')}
 
 const Doc = () => {
@@ -109,6 +112,3 @@ const docPath = path.resolve(process.cwd(), 'src/pages/doc/index.tsx');
 writeFileSync(docPath, template)
 ```
 
-### 待完善
-
-由于文档文件和动态生成路由文件是在项目启动的时候做的，所以本地开发不能实时的添加文档文件，这个需要优化下。
